fixed chat thing overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,7 @@ form button {
     margin: 0;
     padding: 0;
     height: auto;
-    max-height: 95.5vh;
+    max-height: 92.5vh;
     overflow-y: auto;
     background: #fff;
     border: 2px solid black;
